# libcso

./: .gitignore  BuildOptions.cmake  CMakeLists.txt  PKGBUILD  dev_setup.sh  install.sh  libcso_config.h.in  test.sh  tets.c
include/libcso/: cso_cpp_compat.h  cso_dyn_vtable.h  cso_error.h  cso_instanceof.h  cso_object_c.h  cso_plat_allocators.h  cso_pseudo_keywords.h  cso_string_c.h  cso_string_view_c.h  csoattrs.h  csobool.h  csodefs.h  csotypes.h
include/libcso/io/: cso_file_c.h
src/: cso_dyn_vtable.c  cso_instanceof.c  cso_object_c.c  cso_plat_allocators.c  cso_string_c.c  cso_string_view_c.c
src/Internal/: error_backend.c
src/internal/: error_backend.c
src/io/: cso_file_c.c
